--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@
 buildscript {
     
     repositories {
-        google()
+
         jcenter()
+        google()
     }
+
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-
+        classpath 'com.mob.sdk:MobSDK:2018.0319.1724'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +23,10 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+
+        maven {
+            url "http://mvn.mob.com/android"
+        }
     }
 }
 
