--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,41 +1,87 @@
-apply plugin: 'com.android.application'
+
+apply plugin: 'com.android.library'
+apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion 28
+
+
     defaultConfig {
-        applicationId "zixun.xcb.example.zixun"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
+        def BOOLEAN = "boolean"
+        def TRUE = "true"
+        def FALSE = "false"
+        def IS_SHOW_LOG = "IS_SHOW_LOG"
+
+        debug {
+            minifyEnabled false
+            buildConfigField BOOLEAN, IS_SHOW_LOG, TRUE
+        }
+
         release {
             minifyEnabled false
+            buildConfigField BOOLEAN, IS_SHOW_LOG, FALSE
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    publishNonDefault true
 }
-
+MobSDK {
+    appKey "2acd54331c6d8"
+    appSecret "de6dc54e057e5d5b9fc2017662c74b7b"
+    SMSSDK {}
+}
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    //butterknife
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    //design
     implementation 'com.android.support:design:27.1.1'
+
+    //retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+
+    //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
+    //GSON
     implementation 'com.google.code.gson:gson:2.8.4'
+
+    //RecycleView
     implementation 'com.android.support:recyclerview-v7:23.4.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    //xutils
+    implementation 'org.xutils:xutils:3.5.1'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
+
+    //RxJava2
     implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    implementation 'org.xutils:xutils:3.5.1'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    //Logger
+    implementation 'com.orhanobut:logger:1.15'
+
+    //SupportFragment
+    implementation 'me.yokeyword:fragmentation:0.7.7'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':sdk')
 }
